# orion

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  README.zh-CN.md  commitlint.config.js  docker-compose.yml  task.md  tasks.md
backend/: README.md  alembic.ini  babel.cfg  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_api_keys.py  0002_extend_notification_apis.py  0003_auth_profiles_and_secrets.py  0004_bid_relations_and_drop_fks.py  0005_api_keys.py  0006_wechat_official_account.py  0007_wechat_message_send_record_nullable.py
backend/app/: main.py
backend/app/adapters/: __init__.py
backend/app/core/: config.py  i18n.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py
backend/app/observability/: __init__.py  metrics.py
backend/app/repository/: api_keys.py  auth_profiles.py  dispatches.py  endpoints.py  message_definitions.py  send_records.py  systems.py  users.py  wechat_official_account.py
backend/app/schemas/: api_keys.py  auth.py  auth_profiles.py  dispatches.py  endpoints.py  message_definitions.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_dispatches.py  test_health.py  test_http_mailgun.py  test_http_sendgrid.py  test_i18n.py  test_message_definitions.py  test_notify.py  test_notify_basic_auth.py  test_notify_smtp.py  test_notify_wechat_integration.py  test_send_test_mailgun.py  test_send_test_sendgrid.py  test_send_test_smtp.py  test_smtp_sender.py  test_systems.py  test_wechat_channel.py
(+262 files in other folders)
